less shitty description

--- a/index.html
+++ b/index.html
@@ -2,35 +2,27 @@
 
 <html>
 	<head>
-		<title>Otoo Jaursk</title>
+		<title>Otto Jursch</title>
 	</head>
 	<body>
 		<h1>Welcome to my Website</h1>
-		<p>I'm Otto Jursch. The point of this website is to show off my
-		frontend design skills. Just kidding. The real purpose of this 
-		website is to give me a place to write about whatever I'm trying 
-		to learn at that moment. The idea is that if I can explain what
-		I've learned effectively, then I actually have a pretty good
-		understanding of it. The reason this is public is because I have
-		delusions that people will post something I write here to HackerNews
-		and it will get lots of upvotes. 
 
-		The explanation for the website's "college professor syllabus"
-		aesthetic is a combination of laziness and hatred of CSS.
-		</p>
+        <div>
 		<h3>About Me</h3>
-		<p>I'm a 20 year old college student at UC San Diego (not San
-		Diego State. UC San Diego, the school in San Diego you haven't
-		heard of because we hate sports). I like writing code. My code
-		doesn't really like to work. I'm trying to fix that. I also like
-		basketball.
-		</p>
-		<ul>
-		
-		<li>
-			<a href=test_post/post.html>test_post</a>
-		</li>
-		
-	</ul>
+        <!--<img src="assets/me.jpg" style="float : left;"/> -->
+		<p style="float: right;">
+        I'm a 20 year old Computer Science student at UC San Diego. I'm interested in most aspects of
+        computer science, but I am particularily interested in robotics, machine
+        learning, functional programming, and evangelizing Rust without fully
+        understanding its advantages.
+        </p>
+        </div>
+        <h3> About this Website </h3>
+		<p>The main purpose of this website is to show off my incredible front
+        end design and React.js skills. The secondary purpose is to have an
+        actual personal website to put on my resume so I can seem like a
+        real engineer, and also to potentially keep a technical blog of
+        sorts.</p>
+        <ul></ul>
 	</body>
 </html>
