--- a/index.html
+++ b/index.html
@@ -2,27 +2,34 @@
 
 <html>
 	<head>
-		<title>Otto Jursch</title>
+		<title>Otto Jursch is a person</title>
 	</head>
 	<body>
-		<h1>Welcome to my Website</h1>
 
         <div>
 		<h3>About Me</h3>
-        <!--<img src="assets/me.jpg" style="float : left;"/> -->
+        <!-- <img src="assets/me.jpg" style="float : left;"/> -->
 		<p style="float: right;">
-        I'm a 20 year old Computer Science student at UC San Diego. I'm interested in most aspects of
-        computer science, but I am particularily interested in robotics, machine
-        learning, functional programming, and evangelizing Rust without fully
-        understanding its advantages.
+        I'm a 21 year old Computer Science student at UC San Diego. I'm interested in most aspects of
+        computer science, but I am particularily interested in robotics,
+        autonomous vehicles machine learning, and functional programming.
         </p>
+        <h3>
+            Links
+            </h3>
+
+            <li>
+                <ul> <a href="tuas.ucsd.edu">Triton Unmanned Aerial Systems</a></ul>
+                <ul> <a href="tbd"> Aerial Lidar</a></ul>
+                </li>
+                    
         </div>
         <h3> About this Website </h3>
-		<p>The main purpose of this website is to show off my incredible front
-        end design and React.js skills. The secondary purpose is to have an
-        actual personal website to put on my resume so I can seem like a
-        real engineer, and also to potentially keep a technical blog of
-        sorts.</p>
+		<p>
+            The main purpose of this website is to show off my incredible front
+        end design and React.js skills, and how they can be used to achieve a
+        that famed linear algebra professor aesthetic. 
+        </p>
         <ul></ul>
 	</body>
 </html>
